[package]
name = "multiplex-stream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
bincode = "1.3.3"
tokio = { version = "1.14.0", features = ["full"] }
stream-channel = { path = "../stream-channel" }
futures = "0.3.18"
async-bincode = "0.6.1"
rand = "0.8.4"